# gpwe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
base/: CMakeLists.txt  Camera.cpp  Font.cpp  Model.cpp  Object.cpp  Renderer.cpp  Shape.cpp  Thread.cpp  World.cpp  embed.hpp.in  input.cpp  meta.cpp  physics.cpp  resource.cpp  sys.cpp  ui.cpp
client/: CMakeLists.txt  gpwe-config.toml  main.cpp
cmake/: FindFreeImage.cmake  FindLibMagic.cmake
docs/: CMakeLists.txt  mkdocs.yml
docs/docs/: Plugins.md  apps.md  getting-started.md  index.md  plugins.md
docs/docs/style/: main.css
include/gpwe/: Allocator.hpp  App.hpp  Camera.hpp  Font.hpp  Manager.hpp  Model.hpp  Octree.hpp  Program.hpp  Renderer.hpp  Shape.hpp  String.hpp  Texture.hpp  Ticker.hpp  Version.hpp  WorkQueue.hpp  World.hpp  app.hpp  config.hpp.in  embed.hpp  input.hpp  log.hpp  meta.hpp  physics.hpp  render.hpp  resource.hpp  sys.hpp  ui.hpp  world.hpp
include/gpwe/util/: Allocator.hpp  Event.hpp  Fn.hpp  List.hpp  Map.hpp  Object.hpp  Octree.hpp  Str.hpp  Thread.hpp  Timer.hpp  Variant.hpp  Vector.hpp  WorkQueue.hpp  algo.hpp  math.hpp  meta.hpp  noise.hpp  types.hpp
physics-bullet3/: CMakeLists.txt  physics-bullet3.cpp  physics-bullet3.hpp
renderer-gl43/: CMakeLists.txt  RenderFramebufferGL43.cpp  RenderPipelineGL43.cpp  RenderProgramGL43.cpp  RendererGL43.cpp  RendererGL43.hpp  shaders.hpp
renderer-gl43/shaders/: fullbright.frag  fullbright.vert
sys-sdl2/: CMakeLists.txt  SysSDL2.cpp  SysSDL2.hpp
testembed/: CMakeLists.txt  ContainerWidget.cpp  ContainerWidget.hpp  EmbedWidget.cpp  EmbedWidget.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
testgame/: CMakeLists.txt  TestApp.cpp  TestApp.hpp
testgame/Assets/Models/: SphereGuy.fbx
world-simple/: CMakeLists.txt  WorldSimple.cpp  WorldSimple.hpp
